# chatbot

./: .gitignore  .mcp.json  .opencode.json  Program.cs  README.md  RUNBOOK.md  appsettings.json  chatbot.csproj  scracth
Controllers/Api/: AccountController.cs  ChatController.cs  DocumentsController.cs  FeedbackController.cs  NotificationsController.cs
Hubs/: DocumentHub.cs
Infrastructure/AiWorker/: AiWorkerClient.cs  AiWorkerOptions.cs  IAiWorkerClient.cs
Infrastructure/AiWorker/Contracts/: IngestRequest.cs  IngestResult.cs  LlmModelsResult.cs  LlmStatus.cs  QueryEvent.cs  QueryRequest.cs
Infrastructure/Audit/: AuditLogger.cs  IAuditLogger.cs
Infrastructure/Authorization/: AuthorizationPolicies.cs  RoleSeeder.cs  Roles.cs
Infrastructure/Identity/: AppClaimTypes.cs  ApplicationUserClaimsPrincipalFactory.cs
Infrastructure/Storage/: IDocumentStorage.cs  LocalFileSystemStorage.cs  StorageOptions.cs
Migrations/: 20260602082209_InitialIdentity.Designer.cs  20260602082209_InitialIdentity.cs  20260604031254_AddDocuments.Designer.cs  20260604031254_AddDocuments.cs  20260604083324_AddChatdotnet.Designer.cs  20260604083324_AddChatdotnet.cs  20260604153230_AddSystemLogTable.Designer.cs  20260604153230_AddSystemLogTable.cs  20260616072428_AddUserAvatarPath.Designer.cs  20260616072428_AddUserAvatarPath.cs  20260618071444_AddAiConfig.Designer.cs  20260618071444_AddAiConfig.cs  20260619015808_AddAiProviderKey.Designer.cs  20260619015808_AddAiProviderKey.cs  ApplicationDbContextModelSnapshot.cs
Models/: AiConfig.cs  AiProviderKey.cs  ApplicationUser.cs  ChatMessage.cs  ChatRole.cs  Conversation.cs  Department.cs  Document.cs  DocumentLimits.cs  DocumentStatus.cs  Feedback.cs  FeedbackRating.cs  LogSeverity.cs  SystemLog.cs
Pages/: _ViewImports.cshtml
Pages/Account/: AccessDenied.cshtml  AccessDenied.cshtml.cs  Avatar.cshtml  Avatar.cshtml.cs  ChangePassword.cshtml  ChangePassword.cshtml.cs  Login.cshtml  Login.cshtml.cs  Logout.cshtml  Logout.cshtml.cs  Register.cshtml  Register.cshtml.cs
Pages/Admin/: AiSettings.cshtml  AiSettings.cshtml.cs  Documents.cshtml  Documents.cshtml.cs  Feedback.cshtml  Feedback.cshtml.cs  Index.cshtml  Index.cshtml.cs  Logs.cshtml  Logs.cshtml.cs  Users.cshtml  Users.cshtml.cs
Pages/Chat/: Index.cshtml  Index.cshtml.cs
Pages/Shared/: _DarkModeHead.cshtml  _Layout.cshtml  _NavbarPartial.cshtml  _NotificationBellPartial.cshtml
RAG_test/: eval_retrieval.py  migrate_collection.py  test_eval_metrics.py  test_pipeline.py
Services/Ai/: AiConfigService.cs  IAiConfigService.cs  IProviderKeyService.cs  ProviderKeyService.cs
Services/Chat/: ChatService.cs  IChatService.cs
Services/Documents/: DocumentCreationRequest.cs  DocumentCreationResult.cs  DocumentService.cs  IDocumentService.cs
UserscaokhDesktopvscodechatbotobjverify-build/: appsettings.json  chatbot.deps.json  chatbot.staticwebassets.endpoints.json  chatbot.staticwebassets.runtime.json
Workers/: DocumentIngestionWorker.cs
process/context/: all-context.md
process/context/planning/: all-planning.md
process/context/tests/: all-tests.md
process/features/ai-settings/active/: ai-settings-phase1-status_PLAN_18-06-26.md  ai-settings-phase2-model-switch_PLAN_18-06-26.md  ai-settings-phase3-provider-abstraction_PLAN_18-06-26.md  ai-settings-phase4-keys-routing_PLAN_18-06-26.md  ai-settings-umbrella_PLAN_18-06-26.md
process/general-plans/active/: hybrid-chunker_PLAN_09-06-26.md
process/general-plans/active/rag-source-citations_16-07-26/: rag-source-citations_PLAN_16-07-26.md  rag-source-citations_SPEC_16-07-26.md
process/general-plans/active/worker-precommit-fixes_06-07-26/: worker-precommit-fixes_PLAN_06-07-26.md  worker-precommit-fixes_REPORT_06-07-26.md
process/general-plans/backlog/: code-debt_worker-audit_06-07-26.md  code-review-graph-unicode_BACKLOG.md
process/general-plans/completed/: admin-unified-page_PLAN_10-06-26.md  completed_hybrid-chunker_PLAN_09-06-26.md
process/general-plans/reports/: 2026-06-17-ui-overhaul-session-handoff.md  2026-06-23-session-handoff.md  2026-07-15-rag-phase0-phase1-handoff.md
src/: crawler.py  eda.py
worker/: README.md  pyproject.toml
worker/app/: __init__.py  auth.py  config.py  main.py  queue_worker.py
worker/app/api/: documents.py  health.py  ingest.py  llm.py  query.py  test_ingest_partial_propagation.py
worker/app/schemas/: ingest.py  query.py
worker/app/services/: chunk_metadata.py  chunker.py  embedder.py  hyde.py  llm_router.py  loader.py  prompt_builder.py  reranker.py  retriever.py  segmenter.py  sparse_encoder.py  test_chunker_accuracy.py  test_chunker_noise_filter.py  test_chunker_token_cap.py  test_hyde_generation.py  test_loader_partial.py  test_prompt_rendering.py  test_rag_pipeline_integration.py  test_reranker_ordering.py  test_retriever_fusion.py  test_segmenter.py  test_segmenter_govt_vocab.py  test_vectorstore_schema.py  vectorstore.py
worker/app/services/preprocessing/: __init__.py  docx_processor.py
worker/app/services/prompts/: rag_system.j2
wwwroot/js/: chat.js
