[project]
name = "ld3-rag-worker"
version = "0.1.0"
description = "FastAPI worker for the LD3 RAG chatbot — embedding + vector indexing."
requires-python = ">=3.11"

dependencies = [
    # ---- Web framework ----
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.10",     # required for multipart/form-data parsing
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",                # direct Ollama /api/tags status probe (also a transitive dep)

    # ---- Logging ----
    "structlog>=24.0.0",

    # ---- RAG pipeline ----
    "llama-index-core>=0.11.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-readers-file>=0.2.0",
    "llama-index-vector-stores-qdrant>=0.3.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-llms-openai>=0.2.0",          # cloud provider (Phase 4)
    "llama-index-llms-anthropic>=0.1.0",       # cloud provider (Phase 4)
    "llama-index-llms-gemini>=0.1.0",          # cloud provider (Phase 4)

    # ---- Prompt templates ----
    "jinja2>=3.1.0",

    # ---- Embedding model backend ----
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",                    # explicit pin: chunker owns a bge-m3 AutoTokenizer
                                               # for exact token-cap enforcement (transitive via
                                               # sentence-transformers, pinned here on purpose)

    # ---- Vector DB client ----
    "qdrant-client>=1.11.0",

    # ---- Document parsers ----
    "docling>=2.0.0",                          # PDF/DOCX → Markdown with table structure
    "easyocr>=1.7.0",                          # Vietnamese OCR for scanned PDFs (Docling OCR engine)
    "pypdfium2>=4",                            # direct import in loader.py for PDF page-count batching (transitive via docling, pinned on purpose)

    # ---- Smart chunking ----
    "langchain-text-splitters>=0.3.0",         # RecursiveCharacterTextSplitter

    # ---- Async job queue ----
    "arq>=0.26.0",                             # Redis-backed worker queue

    # ---- System monitoring ----
    "psutil>=5.9.0",                           # RAM check before heavy OCR
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",                           # worker unit-test fixtures (chunker/loader/ingest)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
